# source

./: .appveyor.yml  .clang-format  .codecov.yml  .exec-helper  .exec-helper_profiles  .gitchangelog.rc  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .readthedocs.yml  .windows.exec-helper  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Doxyfile-man1  INSTALL.md  INSTALL.rst  LICENSE  Makefile  README.md  README.rst  SConstruct  conf.py  exec  exec.py  executeLCOV.sh  index.rst  installer.nsi  meson.build  meson_options.txt  toolchain.cmake  toolchain.cmake.in
completion/: CMakeLists.txt  _eh  _exec-helper  completion.bash  completion.zsh  init-completion.sh  meson.build
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  meson.build
docs/api/: CMakeLists.txt  Doxyfile.in  meson.build
docs/html/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/integration-test/feature/: execute-multiple-statements.md  index.md
docs/integration/feature/: command-line-arguments.md  config.md  environment.md  execute-multiple-statements.md  execution-order.md  help-option.md  index.md  version-option.md
docs/man/: CMakeLists.txt  Doxyfile.in
docs/man/man1/: CMakeLists.txt  Doxyfile.in  exec-helper-usage.md
docs/man/man1-integration/: CMakeLists.txt
docs/man/man5/: CMakeLists.txt  Doxyfile.in
docs/man1/: Doxyfile  exec-helper-usage.dox
docs/man3/: Doxyfile
docs/man5/: Doxyfile  exec-helper-config.dox
docs/usage/: CMakeLists.txt  conf.py  html.CMakeLists.txt  man.CMakeLists.txt  meson.build
docs/xml/: CMakeLists.txt
gitchangelog/: .gitchangelog.rc  CMakeLists.txt  meson.build
src/: CMakeLists.txt  SConscript  meson.build
src/applications/: CMakeLists.txt  SConscript  exec-helper-config.dox  exec-helper-usage.dox  exec-helper-usage.md  exec-helper.cpp  exec-helper.md  exec-helper.rst  logger.cpp  logger.h  main.dox  main.md  meson.build  version.h.in
src/catch/: CMakeLists.txt  SConscript
src/commander/: CMakeLists.txt  SConscript  meson.build
src/commander/src/: commander.cpp  logger.cpp
src/config/: .clang-tidy  CMakeLists.txt  SConscript  meson.build
src/config/docs/: exec-helper-config-environment.md  exec-helper-config-environment.rst  exec-helper-config-patterns.md  exec-helper-config-patterns.rst  exec-helper-config.md  exec-helper-config.rst
src/config/examples/: exec-helper-config-environment.example  exec-helper-config.example
src/config/src/: argv.cpp  cast.cpp  config.cpp  configFileSearcher.cpp  envp.cpp  fleetingOptions.cpp  logger.cpp  optionDescriptions.cpp  pathManipulation.cpp  pattern.cpp  patternsHandler.cpp  settingsNode.cpp  yaml.cpp  yamlWrapper.cpp
src/core/: .clang-tidy  CMakeLists.txt  SConscript  meson.build
src/core/src/: analyzeDescription.cpp  argv.cpp  compilerDescription.cpp  envp.cpp  execHelperOptions.cpp  immediateExecutor.cpp  logger.cpp  optionDescriptions.cpp  pattern.cpp  patterns.cpp  patternsHandler.cpp  posixShell.cpp  reportingExecutor.cpp  sequentialTaskRunner.cpp  target.cpp  targetDescription.cpp  task.cpp
src/log/: .clang-tidy  CMakeLists.txt  meson.build
src/log/src/: consoleLogger.cpp  log.cpp  logLevel.cpp  logger.cpp
src/plugins/: .clang-tidy  CMakeLists.txt  SConscript  meson.build
src/plugins/docs/: command-line.rst  environment.rst  exec-helper-custom-plugins.md  exec-helper-custom-plugins.rst  exec-helper-plugins-bash.rst  exec-helper-plugins-bootstrap.md  exec-helper-plugins-bootstrap.rst  exec-helper-plugins-clang-static-analyzer.md  exec-helper-plugins-clang-static-analyzer.rst  exec-helper-plugins-clang-tidy.md  exec-helper-plugins-clang-tidy.rst  exec-helper-plugins-cmake.md  exec-helper-plugins-cmake.rst  exec-helper-plugins-command-line-command.dox  exec-helper-plugins-command-line-command.md  exec-helper-plugins-command-line-command.rst  exec-helper-plugins-command-plugin.md  exec-helper-plugins-command-plugin.rst  exec-helper-plugins-cppcheck.md  exec-helper-plugins-cppcheck.rst  exec-helper-plugins-docker.md  exec-helper-plugins-docker.rst  exec-helper-plugins-execute-plugin.md  exec-helper-plugins-execute-plugin.rst  exec-helper-plugins-fish.rst  exec-helper-plugins-lcov.md  exec-helper-plugins-lcov.rst  exec-helper-plugins-make.md  exec-helper-plugins-make.rst  exec-helper-plugins-memory.md  exec-helper-plugins-memory.rst  exec-helper-plugins-meson.rst  exec-helper-plugins-ninja.md  exec-helper-plugins-ninja.rst  exec-helper-plugins-pmd.md  exec-helper-plugins-pmd.rst  exec-helper-plugins-scons.md  exec-helper-plugins-scons.rst  exec-helper-plugins-selector.md  exec-helper-plugins-selector.rst  (+10 more)
src/plugins/examples/: .clang-tidy  CMakeLists.txt  Makefile  SConstruct  bash.example  bootstrap-mock.sh  bootstrap.example  build.ninja  clang-static-analyzer.example  clang-tidy.example  cmake.example  command-line-command.example  cppcheck.example  docker.example  fish.example  hello.cpp  lcov.example  make.example  meson.build  meson.example  meson_options.txt  ninja.example  pmd.example  scons.example  selector.example  sh.example  valgrind.example  world.cpp  zsh.example
src/test/: CMakeLists.txt  SConscript
src/yaml/: .clang-tidy  CMakeLists.txt  SConscript
src/yaml/src/: yaml.cpp  (+2 more)
test/: .clang-tidy  CMakeLists.txt  buildTargetTest.py  cleanTargetTest.py  distcleanTargetTest.py  meson.build  options.py  runTargetTest.py
test/base-utils/: CMakeLists.txt  meson.build
test/catch/: CMakeLists.txt  meson.build
test/cm/: cm.py  command.py  target.py  unique_ordered_list.py
test/commander/: CMakeLists.txt  meson.build
test/config/: .clang-tidy  CMakeLists.txt  meson.build
test/core/: .clang-tidy  CMakeLists.txt  generators.CMakeLists.txt  meson.build
test/integration/: .clang-tidy  CMakeLists.txt  conftest.py  exec-helper-integration-test.md  pytest.ini  requirements.txt
test/log/: CMakeLists.txt  meson.build
test/plugins/: .clang-tidy  CMakeLists.txt  meson.build
test/stubs/: compilerStub.h  executorStub.h  fleetingOptionsStub.h  meson.build  modeStub.h  optionsStub.h  shellStub.h
test/utils/: CMakeLists.txt  meson.build
test/yaml/: CMakeLists.txt  test.yaml
(+450 files in other folders)
