option('version', type: 'string', value: 'DEVELOPER-VERSION', description: 'Set target version')
option('copyright', type: 'string', value: 'COPYRIGHT (c)', description: 'Set copyright message')
option('plugins-prefix', type: 'string', value: '/usr/share/exec-helper/plugins', description: 'The actual installation path for the default plugin files. Useful for packaging systems where the install prefix is different from where the plugins will end up eventually')
option('license-prefix', type: 'string', value: '/usr/share/exec-helper', description: 'The directory to install the license to')

option('usage-documentation', type : 'boolean', value : 'true', description: 'Build usage documentation')
option('usage-documentation-man', type : 'boolean', value : 'true', description: 'Build usage documentation as MAN pages')
option('usage-documentation-html', type : 'boolean', value : 'false', description: 'Build usage documentation as HTML pages')

option('api-documentation', type : 'boolean', value : 'false', description: 'Build api documentation')
option('changelog', type : 'boolean', value : 'false', description: 'build the changelog')

option('use-system-yaml-cpp', type: 'feature', value: 'auto', description: 'Use the system yaml-cpp')
option('use-system-lua', type: 'feature', value: 'auto', description: 'Use the system lua')

option('test', type : 'boolean', value : 'true', description: 'Enable tests')
option('testdir', type : 'string', value : 'test', description: 'Set the target test directory')
option('use-system-catch2', type: 'feature', value: 'auto', description: 'Use the system catch2')
option('use-system-rapidcheck', type: 'feature', value: 'auto', description: 'Use the system rapidcheck')

option('terminate-on-assert', type: 'boolean', value: 'false', description: 'Terminate on an assert failure')
option('completion-files', type: 'boolean', value: 'true', description: 'Install completion files')
option('use-static-boost', type: 'boolean', value: 'false', description: 'Build and link statically with Boost')
