install_data(['init-completion.sh', 'completion.bash', 'completion.zsh'], install_dir: get_option('datadir') / 'exec-helper' / 'completions')
install_data(['completion.bash', 'completion.bash'], rename: ['eh', 'exec-helper'], install_dir: 'share/bash-completion')
install_data(['_eh', '_exec-helper'], install_dir: 'share/zsh/functions/Completion/Unix')
